[MNG-8535] Full std stream support for executor (#2082)
The std stream support was incomplete in maven-executor. Also some unrelated fixes.

---

https://issues.apache.org/jira/browse/MNG-8535